--- a/Index.ipynb
+++ b/Index.ipynb
@@ -22,7 +22,7 @@
     "## Objectives\n",
     "\n",
     "* Practice defining classes and instantiating instances of those classes\n",
-    "* Practice defining instance methods"
+    "* Practice defining instance methods\n"
    ]
   },
   {
@@ -51,7 +51,58 @@
    },
    "outputs": [],
    "source": [
-    "# Define Driver Class here with properties for each instance variable"
+    "# Define Driver Class here with properties for each instance variable\n",
+    "class Driver:\n",
+    "\n",
+    "    def get_first(self):\n",
+    "        return self._first\n",
+    "\n",
+    "    def set_first(self, first):\n",
+    "        self._first = first\n",
+    "\n",
+    "    def del_first(self):\n",
+    "        del self._first\n",
+    "\n",
+    "    first = property(get_first, set_first, del_first)\n",
+    "\n",
+    "    def get_last(self):\n",
+    "        return self._last\n",
+    "\n",
+    "    def set_last(self, last):\n",
+    "        self._last = last\n",
+    "\n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "\n",
+    "    last = property(get_last, set_last, del_last)\n",
+    "\n",
+    "    def get_rating(self):\n",
+    "        return self._rating\n",
+    "\n",
+    "    def set_rating(self, rating):\n",
+    "        self._rating = rating\n",
+    "\n",
+    "    def del_rating(self):\n",
+    "        del self._rating\n",
+    "\n",
+    "    rating = property(get_rating, set_rating, del_rating)\n",
+    "\n",
+    "    def get_miles_driven(self):\n",
+    "        return self._miles_driven\n",
+    "\n",
+    "    def set_miles_driven(self, miles_driven):\n",
+    "        self._miles_driven = miles_driven\n",
+    "\n",
+    "    def del_miles_driven(self):\n",
+    "        del self._miles_driven\n",
+    "\n",
+    "    miles_driven = property(get_miles_driven, set_miles_driven, del_miles_driven)\n",
+    "\n",
+    "    def fullname(self):\n",
+    "        return \"{} {}\".format(self.first, self.last)\n",
+    "\n",
+    "    def greet_passenger(self):\n",
+    "        return \"Hello! I'll be your driver today. My name is {}\".format(self.fullname())"
    ]
   },
   {
@@ -91,7 +142,47 @@
    },
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Passenger:\n",
+    "\n",
+    "    def get_first(self):\n",
+    "        return self._first\n",
+    "\n",
+    "    def set_first(self, first):\n",
+    "        self._first = first\n",
+    "\n",
+    "    def del_first(self):\n",
+    "        del self._first\n",
+    "\n",
+    "    first = property(get_first, set_first, del_first)\n",
+    "\n",
+    "    def get_last(self):\n",
+    "        return self._last\n",
+    "\n",
+    "    def set_last(self, last):\n",
+    "        self._last = last\n",
+    "\n",
+    "    def del_last(self):\n",
+    "        del self._last\n",
+    "\n",
+    "    last = property(get_last, set_last, del_last)\n",
+    "\n",
+    "    def get_email(self):\n",
+    "        return self._email\n",
+    "\n",
+    "    def set_email(self, email):\n",
+    "        self._email = email\n",
+    "\n",
+    "    def del_email(self):\n",
+    "        del self._email\n",
+    "\n",
+    "    email = property(get_email, set_email, del_email)\n",
+    "\n",
+    "    def fullname(self):\n",
+    "        return \"{} {}\".format(self.first, self.last)\n",
+    "\n",
+    "    def yell_name(self):\n",
+    "        return \"{}\".format(self.fullname().upper())\n"
    ]
   },
   {
