--- a/Index.ipynb
+++ b/Index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Object Attributes Lab"
+    "# Object Attributes - Lab"
    ]
   },
   {
@@ -20,6 +20,8 @@
    "metadata": {},
    "source": [
     "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
     "\n",
     "* Practice defining classes and instantiating instances of those classes\n",
     "* Practice defining instance methods"
@@ -144,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
