--- a/Index.ipynb
+++ b/Index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Object Attributes Lab"
+    "# Object Attributes - Lab"
    ]
   },
   {
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In this lab, we will practice defining classes and instance methods. We will also practice working with getter and setter (read and write) methods using properties and decorators to operate on instance variables."
+    "In this lab, you'll practice defining classes and instance methods. "
    ]
   },
   {
@@ -21,8 +21,10 @@
    "source": [
     "## Objectives\n",
     "\n",
+    "You will be able to:\n",
+    "\n",
     "* Practice defining classes and instantiating instances of those classes\n",
-    "* Practice defining instance methods\n"
+    "* Practice defining instance methods"
    ]
   },
   {
@@ -36,170 +38,101 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the cells below define a `Driver` class and define a `Passenger` class.\n",
+    "In the cell below define a `Driver` class.\n",
     "\n",
-    "Our driver instance objects should have instance variables for first name, last name, miles driven, and rating. We can name these instance variables `_first`, `_last` (short for first and last name), `_miles_driven`, and `_rating`. We will want to be able to access, change, and delete these values using the appropriate properties. \n",
-    "\n",
-    "After defining the above instance methods, define an instance method called `greet_passenger`, which returns the string `Hello! I'll be your driver today. My name is ` followed by that driver's first name and last name (i.e. `Hello! I'll be your driver today. My name is John Doe`)."
+    "For this class, create a method called `greet_passenger`, which returns the string `Hello! I'll be your driver today. My name is ` followed by that driver's first name and last name (i.e. `Hello! I'll be your driver today. My name is John Doe`). (Be sure to keep in mind that the driver's name will be stored under two seperate attributes: first and last.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
-    "class Driver:\n",
-    "\n",
-    "    def get_first(self):\n",
-    "        return self._first\n",
-    "\n",
-    "    def set_first(self, first):\n",
-    "        self._first = first\n",
-    "\n",
-    "    def del_first(self):\n",
-    "        del self._first\n",
-    "\n",
-    "    first = property(get_first, set_first, del_first)\n",
-    "\n",
-    "    def get_last(self):\n",
-    "        return self._last\n",
-    "\n",
-    "    def set_last(self, last):\n",
-    "        self._last = last\n",
-    "\n",
-    "    def del_last(self):\n",
-    "        del self._last\n",
-    "\n",
-    "    last = property(get_last, set_last, del_last)\n",
-    "\n",
-    "    def get_rating(self):\n",
-    "        return self._rating\n",
-    "\n",
-    "    def set_rating(self, rating):\n",
-    "        self._rating = rating\n",
-    "\n",
-    "    def del_rating(self):\n",
-    "        del self._rating\n",
-    "\n",
-    "    rating = property(get_rating, set_rating, del_rating)\n",
-    "\n",
-    "    def get_miles_driven(self):\n",
-    "        return self._miles_driven\n",
-    "\n",
-    "    def set_miles_driven(self, miles_driven):\n",
-    "        self._miles_driven = miles_driven\n",
-    "\n",
-    "    def del_miles_driven(self):\n",
-    "        del self._miles_driven\n",
-    "\n",
-    "    miles_driven = property(get_miles_driven, set_miles_driven, del_miles_driven)\n",
-    "\n",
-    "    def fullname(self):\n",
-    "        return \"{} {}\".format(self.first, self.last)\n",
-    "\n",
+    "class Driver():\n",
     "    def greet_passenger(self):\n",
-    "        return \"Hello! I'll be your driver today. My name is {}\".format(self.fullname())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "driver = Driver()\n",
-    "driver.first = \"Rachel\"\n",
-    "driver.last = \"Jensen\"\n",
-    "driver.miles_driven = 100\n",
-    "driver.rating = 4.9\n",
-    "print(driver.first) # \"Rachel\"\n",
-    "print(driver.last) # \"Jensen\"\n",
-    "print(driver.miles_driven) # 100\n",
-    "print(driver.rating) # 4.9\n",
-    "driver.greet_passenger() # Hello! I'll be your driver today. My name is Rachel Jensen"
+    "        print(\"Hello! I'll be your driver today. My name is {} {}\".format(self.first, self.last))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the `Passenger` class, we will want our passenger instance objects to have the attributes first name, last name, and email. Let's continue using the leading underscore naming convention we employed in our `Driver` class and name these instance variables `_first`, `_last`, and `_email`. Define the appropriate instance methods using property and the appropriate decorators for reading (getting), writing (setting), and deleting instance variables. \n",
+    "Great! Now create an instance of your driver class. Then, create the following attributes for your instance:\n",
+    "* first - the first name of the driver. Set it to Matthew.\n",
+    "* last - the last name of the driver. Set it to Mitchell.\n",
+    "* miles_driven - the number of miles driven by the driver. Set it to 100.\n",
+    "* rating - the drivers rating. Set it to 4.9\n",
     "\n",
-    "Next, we want to define an instance method called `yell_name` which returns a string with the passengers name in all caps (i.e. \"RON BURGUNDY\"). "
+    "Finally, use your `greet_passenger1` method for your Driver instance object."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello! I'll be your driver today. My name is Matthew Mitchell\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver = Driver()\n",
+    "driver.first = \"Matthew\"\n",
+    "driver.last = \"Mitchell\"\n",
+    "driver.miles_driven = 100\n",
+    "driver.rating = 4.9\n",
+    "driver.greet_passenger() # Hello! I'll be your driver today. My name is Matthew Mitchell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, create a passenger class with one method `yell_name` which prints the passengers first and last name in all caps. (Again first and last will be stored as seperate attributes.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define Passenger Class here with properties for each instance variable\n",
-    "class Passenger:\n",
-    "\n",
-    "    def get_first(self):\n",
-    "        return self._first\n",
-    "\n",
-    "    def set_first(self, first):\n",
-    "        self._first = first\n",
-    "\n",
-    "    def del_first(self):\n",
-    "        del self._first\n",
-    "\n",
-    "    first = property(get_first, set_first, del_first)\n",
-    "\n",
-    "    def get_last(self):\n",
-    "        return self._last\n",
-    "\n",
-    "    def set_last(self, last):\n",
-    "        self._last = last\n",
-    "\n",
-    "    def del_last(self):\n",
-    "        del self._last\n",
-    "\n",
-    "    last = property(get_last, set_last, del_last)\n",
-    "\n",
-    "    def get_email(self):\n",
-    "        return self._email\n",
-    "\n",
-    "    def set_email(self, email):\n",
-    "        self._email = email\n",
-    "\n",
-    "    def del_email(self):\n",
-    "        del self._email\n",
-    "\n",
-    "    email = property(get_email, set_email, del_email)\n",
-    "\n",
-    "    def fullname(self):\n",
-    "        return \"{} {}\".format(self.first, self.last)\n",
-    "\n",
+    "class Passenger():\n",
     "    def yell_name(self):\n",
-    "        return \"{}\".format(self.fullname().upper())\n"
+    "        print(\"{} {}\".format(self.first.upper(), self.last.upper()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create an instance of your passenger class. Then create an attribute \"first\" set to \"Ron\" and an attribute \"last\" set to \"Burgundy\". Then call the `yell_name` method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RON BURGUNDY\n"
+     ]
+    }
+   ],
    "source": [
     "passenger = Passenger()\n",
     "passenger.first = \"Ron\"\n",
     "passenger.last = \"Burgundy\"\n",
-    "passenger.email = \"ron.burgundy1984@gmail.com\"\n",
-    "print(passenger.first) # \"Ron\"\n",
-    "print(passenger.last) # \"Burgundy\"\n",
-    "print(passenger.email) # \"ron.burgundy1984@gmail.com\"\n",
     "passenger.yell_name() # \"RON BURGUNDY\""
    ]
   },
@@ -215,7 +148,7 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "In this lab, we practiced defining classes, instance methods, and utilizing the property function to create, getter setter, and deleter properties so we could access and operate on our instance variables."
+    "In this lab, you practiced defining classes, creating instances of said classes, and using methods that made calls to object attributes."
    ]
   }
  ],
@@ -235,7 +168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
