removing solutions and adding license

--- a/index.ipynb
+++ b/index.ipynb
@@ -45,14 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Driver Class here with properties for each instance variable\n",
-    "class Driver():\n",
-    "    def greet_passenger(self):\n",
-    "        print(\"Hello! I'll be your driver today. My name is {} {}\".format(self.first, self.last))"
+    "# Define Driver Class here with properties for each instance variable"
    ]
   },
   {
@@ -70,24 +67,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello! I'll be your driver today. My name is Matthew Mitchell\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "driver = Driver()\n",
-    "driver.first = \"Matthew\"\n",
-    "driver.last = \"Mitchell\"\n",
-    "driver.miles_driven = 100\n",
-    "driver.rating = 4.9\n",
-    "driver.greet_passenger() # Hello! I'll be your driver today. My name is Matthew Mitchell"
+    "#Create an instance with the above 4 attributes and then call the greet_passenger method"
    ]
   },
   {
@@ -99,14 +83,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable\n",
-    "class Passenger():\n",
-    "    def yell_name(self):\n",
-    "        print(\"{} {}\".format(self.first.upper(), self.last.upper()))"
+    "# Define Passenger Class here with properties for each instance variable"
    ]
   },
   {
@@ -118,22 +99,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RON BURGUNDY\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "passenger = Passenger()\n",
-    "passenger.first = \"Ron\"\n",
-    "passenger.last = \"Burgundy\"\n",
-    "passenger.yell_name() # \"RON BURGUNDY\""
+    "#Create an instance of the passenger class with the first and last attributes. Then call the yell_name method"
    ]
   },
   {
