--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "In the cell below define a `Driver` class.\n",
     "\n",
-    "For this class, create a method called `greet_passenger`, which returns the string `Hello! I'll be your driver today. My name is ` followed by that driver's first name and last name (i.e. `Hello! I'll be your driver today. My name is John Doe`). (Be sure to keep in mind that the driver's name will be stored under two separate attributes: first and last.)"
+    "For this class, create a method called `greet_passenger()`, which returns the string `Hello! I'll be your driver today. My name is ` followed by that driver's first name and last name (i.e. `Hello! I'll be your driver today. My name is John Doe`). (Be sure to keep in mind that the driver's name will be stored under two separate attributes: first and last.)"
    ]
   },
   {
@@ -70,12 +70,12 @@
    "metadata": {},
    "source": [
     "Great! Now create an instance of your driver class. Then, create the following attributes for your instance:\n",
-    "* first - the first name of the driver. Set it to Matthew.\n",
-    "* last - the last name of the driver. Set it to Mitchell.\n",
-    "* miles_driven - the number of miles driven by the driver. Set it to 100.\n",
-    "* rating - the driver's rating. Set it to 4.9\n",
+    "* `first` - the first name of the driver. Set it to Matthew.\n",
+    "* `last` - the last name of the driver. Set it to Mitchell.\n",
+    "* `miles_driven` - the number of miles driven by the driver. Set it to 100.\n",
+    "* `rating` - the driver's rating. Set it to 4.9\n",
     "\n",
-    "Finally, use your `greet_passenger1` method for your Driver instance object."
+    "Finally, use your `greet_passenger()` method for your `Driver` instance object."
    ]
   },
   {
@@ -84,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create an instance with the above 4 attributes and then call the greet_passenger method"
+    "# Create an instance with the above 4 attributes and then call the greet_passenger method"
    ]
   },
   {
@@ -114,7 +114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, create a passenger class with one method `yell_name` which prints the passenger's first and last name in all caps. (Again first and last will be stored as separate attributes.)"
+    "Now, create a passenger class with one method `yell_name()` which prints the passenger's first and last name in all caps. (Again first and last will be stored as separate attributes.)"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create an instance of your passenger class. Then create an attribute \"first\" set to \"Ron\" and an attribute \"last\" set to \"Burgundy\". Then call the `yell_name` method."
+    "Create an instance of your passenger class. Then create an attribute \"first\" set to \"Ron\" and an attribute \"last\" set to \"Burgundy\". Then call the `yell_name()` method."
    ]
   },
   {
@@ -152,7 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Create an instance of the passenger class with the first and last attributes. Then call the yell_name method"
+    "# Create an instance of the passenger class with the first and last attributes. Then call the yell_name method"
    ]
   },
   {
@@ -208,7 +208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
